# Slot-guard

./: .gitignore  README.md  eda_quick.py
backend/: add_column.py  architecture_design.md  models.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: admin_action.py  mlops.py  routes.py  simulation.py  zone_status.py
backend/app/core/: dataset_manager.py  facade.py  ml_manager.py  strategy.py
backend/app/db/: database.py  models.py  repositories.py
backend/app/schemas/: requests.py
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AdminLayout.jsx  TerminalLoader.jsx
frontend/src/components/ZoneIntelligence/: AdminActionPanel.jsx  SlotStatusTable.jsx  ZoneDemandChart.jsx  ZoneSummaryCards.jsx
frontend/src/components/ui/: select.jsx
frontend/src/lib/: supabaseClient.js
frontend/src/pages/: AdminDashboard.jsx  CheckoutPage.jsx  LoginPage.jsx  MLOpsDashboard.jsx  SetupPage.jsx  UrbanMap.jsx  ZoneIntelligence.jsx
model_building/: .gitignore  dvc.yaml  mlflow.db  pyproject.toml
model_building/data/raw/: final_ml_dataset.csv.dvc
model_building/mlruns/1/models/m-46d2d2b3b3f8438aaf3b9f5483f5b116/artifacts/: MLmodel  conda.yaml  model.ubj  requirements.txt
model_building/saved_models/: .gitignore
model_building/src/: prepare.py  train.py
