[project]
name = "model-building"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]
